--- a/configs/docker_tests.yaml
+++ b/configs/docker_tests.yaml
@@ -1,14 +1,14 @@
 env: "local"
 migrations_path: "file://./migrations"
 http_server:
-  host: "localhost"
-  port: 8082
+  host: "0.0.0.0"
+  port: 8080
   timeout: 4s
   idle_timeout: 60s
   admin_token: "admin"
 postgres:
-  host: "localhost"
-  port: 5433
+  host: "db-test"
+  port: 5432
   user: "postgres"
   password: "postgres"
   dbname: "pr_manager_db_test"
