--- a/docker/tests/docker-compose.yml
+++ b/docker/tests/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: pr_manager_db_test
     ports:
-      - "5434:5432"
+      - "5433:5432"
     volumes:
       - pgdata_pr_manager_test:/var/lib/postgresql
     healthcheck:
@@ -15,6 +15,7 @@ services:
       interval: 5s
       timeout: 10s
       retries: 5
+      start_period: 10s
     networks:
       - internal
 
@@ -23,14 +24,15 @@ services:
       context: ../../
       dockerfile: ./docker/tests/Dockerfile
       target: runtime
-    container_name: pr_manager_migrator_test
     image: pr_manager_image
-    environment:
-      DATABASE_HOST: db-test
-      DATABASE_PORT: "5432"
+    container_name: pr_manager_migrator_test
     depends_on:
       db-test:
         condition: service_healthy
+    environment:
+      CONFIG_PATH: ./configs/docker_tests.yaml
+      DATABASE_HOST: db-test
+      DATABASE_PORT: "5432"
     command: ["/app/bin/migrator", "up"]
     networks:
       - internal
@@ -40,14 +42,18 @@ services:
       context: ../../
       dockerfile: ./docker/tests/Dockerfile
       target: runtime
-    container_name: pr_manager_test
     image: pr_manager_image
-    environment:
-      DATABASE_HOST: db-test
-      DATABASE_PORT: "5432"
-      SERVER_PORT: "8080"
+    container_name: pr_manager_test
     ports:
       - "8082:8080"
+    environment:
+      CONFIG_PATH: ./configs/docker_tests.yaml
+      DATABASE_PORT: "5432"
+      DATABASE_USER: postgres
+      DATABASE_PASSWORD: postgres
+      DATABASE_NAME: pr_manager_db_test
+      DATABASE_HOST: db-test
+      SERVER_PORT: "8080"
     depends_on:
       migrator-test:
         condition: service_completed_successfully
